[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Cutscenes/Astro/Kalam-Regular40.font" type="BitmapFont" id=1]
[ext_resource path="res://Fonts/OrbitronMedium45.font" type="BitmapFont" id=2]
[ext_resource path="res://CommonScenes/CreditsScene/CreditsScene.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Orbitron-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://CommonScenes/eh_jogos/vertical_gradient_shader.tres" type="Material" id=5]
[ext_resource path="res://CommonScenes/eh_jogos/logos/logo_white.png" type="Texture" id=6]
[ext_resource path="res://CommonScenes/CreditsScene/CreditsPromptLegend.tscn" type="PackedScene" id=7]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "credits"
length = 61.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 58, 61 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 52 ), Vector2( 0, 52 ), Vector2( 0, -5997 ), Vector2( 0, -5997 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CreditsLegend/RootControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 5.5, 57.5, 58, 61 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CreditsContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 60, 61 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5, 61 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_activate_navigation"
}, {
"args": [  ],
"method": "_exit_credits"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "editor"
length = 0.001
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CreditsLegend/RootControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CreditsContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 55
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 80
use_filter = true
font_data = ExtResource( 4 )

[node name="CreditsScene" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
color = Color( 0.0156863, 0.0784314, 0.0666667, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "credits"
anims/credits = SubResource( 5 )
anims/editor = SubResource( 7 )

[node name="CreditsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 52.0
margin_bottom = 6862.0
custom_constants/separation = 300
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCredits" type="VBoxContainer" parent="CreditsContainer"]
margin_right = 1920.0
margin_bottom = 980.0
custom_constants/separation = 100

[node name="Daniel" type="VBoxContainer" parent="CreditsContainer/MainCredits"]
margin_left = 560.0
margin_right = 1360.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4

[node name="Name" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_right = 800.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Daniel Queiroz Porto"

[node name="Name2" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 60.0
margin_right = 800.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "eh_jogos"

[node name="Role1" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 160.0
text = "Programming"
align = 2

[node name="Role2" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 164.0
margin_right = 800.0
margin_bottom = 220.0
text = "Game Art"
align = 2

[node name="Role5" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 224.0
margin_right = 800.0
margin_bottom = 280.0
text = "Story"
align = 2

[node name="Role3" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 284.0
margin_right = 800.0
margin_bottom = 340.0
text = "Design"
align = 2

[node name="Role4" type="Label" parent="CreditsContainer/MainCredits/Daniel"]
margin_top = 344.0
margin_right = 800.0
margin_bottom = 400.0
text = "Animations"
align = 2

[node name="Sam" type="VBoxContainer" parent="CreditsContainer/MainCredits"]
margin_left = 660.0
margin_top = 500.0
margin_right = 1260.0
margin_bottom = 720.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4

[node name="Name" type="Label" parent="CreditsContainer/MainCredits/Sam"]
margin_right = 600.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Sam Oz"

[node name="SamOzTwitter" type="LinkButton" parent="CreditsContainer/MainCredits/Sam"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "@SamOz_official"

[node name="Role1" type="Label" parent="CreditsContainer/MainCredits/Sam"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 160.0
text = "Sound FXs"
align = 2

[node name="Role2" type="Label" parent="CreditsContainer/MainCredits/Sam"]
margin_top = 164.0
margin_right = 600.0
margin_bottom = 220.0
text = "Music"
align = 2

[node name="Madruga" type="VBoxContainer" parent="CreditsContainer/MainCredits"]
margin_left = 660.0
margin_top = 820.0
margin_right = 1260.0
margin_bottom = 980.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4

[node name="Name" type="Label" parent="CreditsContainer/MainCredits/Madruga"]
margin_right = 600.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Filipe Stonoga"

[node name="MadrugaTwitter" type="LinkButton" parent="CreditsContainer/MainCredits/Madruga"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "@artbycoltz"

[node name="Role1" type="Label" parent="CreditsContainer/MainCredits/Madruga"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 160.0
text = "Cutscene Art"
align = 2

[node name="Godot" type="VBoxContainer" parent="CreditsContainer"]
margin_left = 420.0
margin_top = 1280.0
margin_right = 1500.0
margin_bottom = 1691.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15

[node name="Name" type="Label" parent="CreditsContainer/Godot"]
margin_right = 1080.0
margin_bottom = 56.0
rect_min_size = Vector2( 1080, 0 )
custom_fonts/font = SubResource( 2 )
text = "Made With Godot thanks to:"

[node name="GodotTeamLink" type="LinkButton" parent="CreditsContainer/Godot"]
margin_left = 620.0
margin_top = 71.0
margin_right = 1080.0
margin_bottom = 127.0
size_flags_horizontal = 8
custom_constants/underline_spacing = 8
text = "Godot Engine team"

[node name="GDQuest" type="LinkButton" parent="CreditsContainer/Godot"]
margin_left = 615.0
margin_top = 142.0
margin_right = 1080.0
margin_bottom = 198.0
size_flags_horizontal = 8
custom_constants/underline_spacing = 8
text = "GDQuest and team"

[node name="GodotSteam" type="LinkButton" parent="CreditsContainer/Godot"]
margin_left = 341.0
margin_top = 213.0
margin_right = 1080.0
margin_bottom = 269.0
size_flags_horizontal = 8
custom_constants/underline_spacing = 8
text = "Godot Steam and contributors"

[node name="GodorReddit" type="LinkButton" parent="CreditsContainer/Godot"]
margin_left = 606.0
margin_top = 284.0
margin_right = 1080.0
margin_bottom = 340.0
size_flags_horizontal = 8
custom_constants/underline_spacing = 8
text = "r/godot Community"

[node name="Role1" type="Label" parent="CreditsContainer/Godot"]
margin_top = 355.0
margin_right = 1080.0
margin_bottom = 411.0
text = "And the Godot Community in  General!"
align = 2

[node name="SpecialThanks" type="VBoxContainer" parent="CreditsContainer"]
margin_left = 371.0
margin_top = 1991.0
margin_right = 1548.0
margin_bottom = 6057.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks"]
margin_right = 1177.0
margin_bottom = 56.0
rect_min_size = Vector2( 1080, 0 )
custom_fonts/font = SubResource( 2 )
text = "Special Thanks to..."

[node name="FamilyGroup" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 56.0
margin_right = 1177.0
margin_bottom = 489.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 150

[node name="Family" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/FamilyGroup"]
margin_top = 40.0
margin_right = 1177.0
margin_bottom = 283.0
custom_constants/separation = 15

[node name="Title2" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/FamilyGroup/Family"]
margin_right = 1177.0
margin_bottom = 101.0

[node name="ChatMeninao" type="Label" parent="CreditsContainer/SpecialThanks/FamilyGroup/Family/Title2"]
margin_right = 1177.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "My Family"
align = 1

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/FamilyGroup/Family/Title2"]
margin_top = 55.0
margin_right = 1177.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "Thank you all for your constant love and support"
align = 1

[node name="Parens" type="Label" parent="CreditsContainer/SpecialThanks/FamilyGroup/Family"]
margin_top = 116.0
margin_right = 1177.0
margin_bottom = 172.0
text = "Mom and Dad"
align = 2

[node name="Sisters" type="Label" parent="CreditsContainer/SpecialThanks/FamilyGroup/Family"]
margin_top = 187.0
margin_right = 1177.0
margin_bottom = 243.0
text = "My Sisters and families"
align = 2

[node name="MeninGroup" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 489.0
margin_right = 1177.0
margin_bottom = 1529.0
custom_constants/margin_bottom = 150

[node name="Meninão" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup"]
margin_right = 1177.0
margin_bottom = 890.0
custom_constants/separation = 30

[node name="Title" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_right = 1177.0
margin_bottom = 101.0

[node name="ChatMeninao" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Title"]
margin_right = 1177.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Everyone at \"Chat  do  Meniñ\":"
align = 1

[node name="ThankYou3" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Title"]
margin_top = 55.0
margin_right = 1177.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "In general, for being good encouraging friends but specifically:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mutt" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_top = 131.0
margin_right = 1177.0
margin_bottom = 237.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Mutt"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Bruno \"Mutt\" Arruda"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Mutt"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Thanks for testing the game, helping out with controllers"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cassio" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_top = 267.0
margin_right = 1177.0
margin_bottom = 373.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Cassio"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Cassio Prates de Lima"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Cassio"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Thanks for helping with the UI revamp"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joao" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_top = 403.0
margin_right = 1177.0
margin_bottom = 509.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Joao"]
margin_right = 1177.0
margin_bottom = 56.0
text = "João Brizzi"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Joao"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "For making a much better \"eh_jogos\" logo than I could ever"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rafa" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_top = 539.0
margin_right = 1177.0
margin_bottom = 694.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Rafa"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Rafael Arrivabene"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Rafa"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 1 )
text = "You were my first customer when I wasn't 
even seriously selling it! It meant a lot!"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outros" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão"]
margin_top = 724.0
margin_right = 1177.0
margin_bottom = 890.0

[node name="Name2" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Outros"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Rhenan Dinardi"
align = 2

[node name="ThankYou2" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Outros"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "(No, I'm not using your nickname here, no way)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/MeninGroup/Meninão/Outros"]
margin_top = 110.0
margin_right = 1177.0
margin_bottom = 166.0
text = "Nicholas Bruggner Grassi"
align = 2

[node name="ChucrutsGroup" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 1529.0
margin_right = 1177.0
margin_bottom = 2431.0
custom_constants/margin_bottom = 150

[node name="Chucrutz" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup"]
margin_right = 1177.0
margin_bottom = 752.0
custom_constants/separation = 30

[node name="Title" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz"]
margin_right = 1177.0
margin_bottom = 101.0

[node name="ChucrutzLabel" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Title"]
margin_right = 1177.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Everyone at \"Clube da Baixa Autoestima\":"
align = 1

[node name="ThankYou3" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Title"]
margin_top = 55.0
margin_right = 1177.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "Again, for being good encouraging friends but specifically:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bruno" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz"]
margin_top = 131.0
margin_right = 1177.0
margin_bottom = 237.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Bruno"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Bruno Feltran"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Bruno"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 1 )
text = "Thanks for some early testing and suggestions"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raul" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz"]
margin_top = 267.0
margin_right = 1177.0
margin_bottom = 422.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Raul"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Raul Alvez"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Raul"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 1 )
text = "for encoraging me to finish this so we can 
make the next game together"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mari" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz"]
margin_top = 452.0
margin_right = 1177.0
margin_bottom = 607.0

[node name="Name" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Mari"]
margin_right = 1177.0
margin_bottom = 56.0
text = "Mariana Marangoni"
align = 2

[node name="ThankYou" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Mari"]
margin_top = 60.0
margin_right = 1177.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 1 )
text = " for trading \"figurinhas\" and rants in our 
designer2programmer journeys"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outros" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz"]
margin_top = 637.0
margin_right = 1177.0
margin_bottom = 752.0

[node name="Name2" type="Label" parent="CreditsContainer/SpecialThanks/ChucrutsGroup/Chucrutz/Outros"]
margin_right = 1177.0
margin_bottom = 115.0
text = "But really, everyone for 
your encouragement and support"
align = 2

[node name="LittleLeoGroup" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 2431.0
margin_right = 1177.0
margin_bottom = 2884.0
custom_constants/margin_bottom = 150

[node name="Leo" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/LittleLeoGroup"]
margin_right = 1177.0
margin_bottom = 303.0
custom_constants/separation = 10

[node name="ExJavaryLabel" type="Label" parent="CreditsContainer/SpecialThanks/LittleLeoGroup/Leo"]
margin_right = 1177.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Léo \"LittleLeo\" Castanho"
align = 1

[node name="ThankYou3" type="Label" parent="CreditsContainer/SpecialThanks/LittleLeoGroup/Leo"]
margin_top = 61.0
margin_right = 1177.0
margin_bottom = 303.0
custom_fonts/font = ExtResource( 1 )
text = "It's always fun to talk with you, specially about games 
and making games since we weren't programmers by graduation 
and are learning as we go, with similar experiencies and difficulties! 
Also I'm really looking forward to your game! Now, if only 
you'd go back to using godot..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExJavaryGroup2" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 2884.0
margin_right = 1177.0
margin_bottom = 3803.0
custom_constants/margin_bottom = 150

[node name="ExJavary" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2"]
margin_right = 1177.0
margin_bottom = 769.0
custom_constants/separation = 30

[node name="Title" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_right = 1177.0
margin_bottom = 253.0

[node name="ExJavaryLabel" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary/Title"]
margin_right = 1177.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "My current and ex coworkers 
(and aggregates) at my day job!"
align = 1

[node name="ThankYou3" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary/Title"]
margin_top = 109.0
margin_right = 1177.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 1 )
text = "I am learning and have learned a lot about 
gamedev in general and godot in specific 
with you all! Special Mentions:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name1" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 283.0
margin_right = 1177.0
margin_bottom = 339.0
text = "Raniery Seles Nardy"
align = 2

[node name="Name2" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 369.0
margin_right = 1177.0
margin_bottom = 425.0
text = "Cláudio \"Fitinho\" Domene"
align = 2

[node name="Name3" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 455.0
margin_right = 1177.0
margin_bottom = 511.0
text = "Thiago Amendola"
align = 2

[node name="Name4" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 541.0
margin_right = 1177.0
margin_bottom = 597.0
text = "Pedro Ciambra"
align = 2

[node name="Name5" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 627.0
margin_right = 1177.0
margin_bottom = 683.0
text = "Jairo Honorio"
align = 2

[node name="Name6" type="Label" parent="CreditsContainer/SpecialThanks/ExJavaryGroup2/ExJavary"]
margin_top = 713.0
margin_right = 1177.0
margin_bottom = 769.0
text = "George Marques"
align = 2

[node name="Prompts" type="MarginContainer" parent="CreditsContainer/SpecialThanks"]
margin_top = 3803.0
margin_right = 1177.0
margin_bottom = 4066.0
custom_constants/margin_bottom = 100

[node name="Leo" type="VBoxContainer" parent="CreditsContainer/SpecialThanks/Prompts"]
margin_right = 1177.0
margin_bottom = 163.0
custom_constants/separation = 10

[node name="ExJavaryLabel" type="Label" parent="CreditsContainer/SpecialThanks/Prompts/Leo"]
margin_right = 1177.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "Nicolae Berbece "
align = 1

[node name="ThankYou3" type="Label" parent="CreditsContainer/SpecialThanks/Prompts/Leo"]
margin_top = 61.0
margin_right = 1177.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )
text = "from Those Awesome Guys for the CC0 button prompts pack"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenGameArt" type="LinkButton" parent="CreditsContainer/SpecialThanks/Prompts/Leo"]
margin_left = 331.0
margin_top = 117.0
margin_right = 845.0
margin_bottom = 163.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "available at OpenGameArt.com"

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsContainer"]
margin_top = 6357.0
margin_right = 1920.0
margin_bottom = 6810.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThankYouForPlaying" type="Label" parent="CreditsContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 6 )
text = "...and YOU for playing!"
align = 1

[node name="TextureRect" type="TextureRect" parent="CreditsContainer/VBoxContainer"]
material = ExtResource( 5 )
margin_top = 180.0
margin_right = 1920.0
margin_bottom = 453.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="CreditsLegend" parent="." instance=ExtResource( 7 )]

[node name="RootControl" parent="CreditsLegend" index="1"]
modulate = Color( 1, 1, 1, 1 )
[connection signal="pressed" from="CreditsContainer/MainCredits/Sam/SamOzTwitter" to="." method="_on_SamOzTwitter_pressed"]
[connection signal="pressed" from="CreditsContainer/MainCredits/Madruga/MadrugaTwitter" to="." method="_on_MadrugaTwitter_pressed"]
[connection signal="pressed" from="CreditsContainer/Godot/GodotTeamLink" to="." method="_on_GodotTeamLink_pressed"]
[connection signal="pressed" from="CreditsContainer/Godot/GDQuest" to="." method="_on_GDQuest_pressed"]
[connection signal="pressed" from="CreditsContainer/Godot/GodotSteam" to="." method="_on_GodotSteam_pressed"]
[connection signal="pressed" from="CreditsContainer/Godot/GodorReddit" to="." method="_on_GodorReddit_pressed"]
[connection signal="pressed" from="CreditsContainer/SpecialThanks/Prompts/Leo/OpenGameArt" to="." method="_on_OpenGameArt_pressed"]

[editable path="CreditsLegend"]
